# nps-ctl

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  index.md
docs/api/: client.md  cluster.md
docs/usage/: cli.md  configuration.md  installation.md  library.md
skills/nps-ctl/: SKILL.md
src/nps_ctl/: __init__.py  api.py  base.py  cli.py  client_mgmt.py  cluster.py  deploy.py  exceptions.py  host.py  logging.py  ssh_proxy.py  tunnel.py  types.py  utils.py
src/nps_ctl/cli/: __init__.py  cmd_clients.py  cmd_deploy.py  cmd_hosts.py  cmd_npc.py  cmd_status.py  cmd_sync.py  cmd_tunnels.py  cmd_utils.py  helpers.py  parser.py
src/nps_ctl/templates/: nps.conf.template
tests/: test_smoke.py
